[package]
name = "windows-win"
version = "2.4.0"
authors = ["Douman <douman@gmx.se>"]
description = "Some windows hacking library with utilities to find windows and access them"
license = "MIT"
edition = "2018"

repository = "https://github.com/DoumanAsh/windows-win-rs"
documentation = "https://docs.rs/windows-win/*/x86_64-pc-windows-msvc/windows_win"

keywords = ["Windows", "winapi"]
categories = []

readme = "README.md"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "std",
    "windef",
    "winerror",
    "handleapi",
    "basetsd",
    "winnt",
    "minwindef",
    "winuser",
    "processthreadsapi",
    "handleapi",
    "memoryapi",
    "winbase",
    "wincon",
    "fileapi",
    "memoryapi",
    "libloaderapi",
    "profileapi",
    "threadpoollegacyapiset",
    "securitybaseapi",
]

[badges]
appveyor = { repository = "DoumanAsh/windows-win-rs"}

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dev-dependencies]
clipboard-win = "^2"
