[package]
name = "windows-win"
version = "3.0.0"
authors = ["Douman <douman@gmx.se>"]
description = "Some windows hacking library with utilities to find windows and access them"
edition = "2018"
license = "BSL-1.0"

repository = "https://github.com/DoumanAsh/windows-win-rs"
documentation = "https://docs.rs/windows-win/*/x86_64-pc-windows-msvc/windows_win"

keywords = ["Windows", "winapi"]
categories = []

readme = "README.md"

[dependencies.error-code]
version = "3"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dev-dependencies]
clipboard-win = "5"
